entity_macros/tests/ui/attribute/conflicting-field-named-last_updated.stderr
error[E0124]: field `last_updated` is already declared
 --> $DIR/conflicting-field-named-last_updated.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^ field already declared
...
7 |     last_updated: usize,
  |     ------------------- `last_updated` first declared here
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0124]: field `last_updated` is already declared
 --> $DIR/conflicting-field-named-last_updated.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  | |
  | field already declared
  | `last_updated` first declared here
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0201]: duplicate definitions with name `last_updated`:
 --> $DIR/conflicting-field-named-last_updated.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  | |
  | previous definition of `last_updated` here
  | duplicate definition
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0201]: duplicate definitions with name `where_last_updated`:
 --> $DIR/conflicting-field-named-last_updated.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  | |
  | previous definition of `where_last_updated` here
  | duplicate definition
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
